V 1.6, moves counter added, slight changes

--- a/MINY/MINY/MainWindow.xaml
+++ b/MINY/MINY/MainWindow.xaml
@@ -12,6 +12,7 @@
 
         </Label>
         <Button Content="ZNOVA" HorizontalAlignment="Left" Height="47" Margin="194,19,0,0" VerticalAlignment="Top" Width="78" Click="Button_Click"/>
+        <Label x:Name="moves" HorizontalAlignment="Left" Height="47" Margin="15,19,0,0" VerticalAlignment="Top" Width="96"/>
 
     </Grid>
 </Window>
