--- a/MINY/MINY/MainWindow.xaml
+++ b/MINY/MINY/MainWindow.xaml
@@ -7,12 +7,31 @@
         mc:Ignorable="d"
         Title="Low Cost Minesweeper" Height="450" Width="460">
     <Grid>
+        <Grid x:Name="topmenugrid" Margin="10,10,10,341">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Label x:Name="moves" HorizontalAlignment="Left" FontSize="30" Grid.Column="0" Grid.Row="0"/>
+            <Button Content="↺" FontSize="30" Click="Button_Click"   Grid.Column="1" Grid.Row="0"/>
+            <ComboBox x:Name="fieldsizecb" FontSize="30" Width="78" Grid.Column="2" Grid.Row="0"/>
+            <Button Content="»" FontSize="30" Width="52"  Grid.Column="3" Grid.Row="0" Height="47" VerticalAlignment="Top" Click="Button_Click_1"/>
+            <Button Content="Check" FontSize="15" Width="52"  Grid.Column="4" Grid.Row="0" Height="47" VerticalAlignment="Top" Click="Button_Click_2" />
+
+
+        </Grid>
         <Label x:Name="contenthere" Margin="10,83,10,0">
-          
+
 
         </Label>
-        <Button Content="ZNOVA" HorizontalAlignment="Left" Height="47" Margin="194,19,0,0" VerticalAlignment="Top" Width="78" Click="Button_Click"/>
-        <Label x:Name="moves" HorizontalAlignment="Left" Height="47" Margin="15,19,0,0" VerticalAlignment="Top" Width="96"/>
+       
 
     </Grid>
 </Window>
