--- a/MINY/MINY/MainWindow.xaml
+++ b/MINY/MINY/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MINY"
         mc:Ignorable="d"
-        Title="Low Cost Minesweeper" Height="450" Width="460" Loaded="Window_Loaded">
-    <Grid>
-        <Grid x:Name="topmenugrid" Margin="10,10,10,341">
+        Title="Low Cost Minesweeper" Height="450" Width="448" Loaded="Window_Loaded">
+    <Grid Background="DarkGray">
+        <Grid x:Name="topmenugrid" Background="DarkGray" Margin="10,0,41.6,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
@@ -21,14 +21,14 @@
             </Grid.ColumnDefinitions>
 
             <Label x:Name="moves" HorizontalAlignment="Left" FontSize="30" Grid.Column="0" Grid.Row="0"/>
-            <Button Content="↺" FontSize="30" Click="Button_Click"   Grid.Column="1" Grid.Row="0"/>
-            <ComboBox x:Name="fieldsizecb" FontSize="30" Width="78" Grid.Column="2" Grid.Row="0"/>
-            <Button Content="»" FontSize="30" Width="52"  Grid.Column="3" Grid.Row="0" Height="47" VerticalAlignment="Top" Click="Button_Click_1"/>
-            <Button Content="Check" FontSize="15" Width="52"  Grid.Column="4" Grid.Row="0" Height="47" VerticalAlignment="Top" Click="Button_Click_2" />
-            <Label x:Name="timer" HorizontalAlignment="Left" FontSize="30" Grid.Column="5" Grid.Row="0"/>
+            <Button Content="↺" FontSize="30" Click="Button_Click" Grid.Column="1" Grid.Row="0"/>
+            <ComboBox x:Name="fieldsizecb" FontSize="30"  Grid.Column="2" Grid.Row="0"/>
+            <Button Content="»" FontSize="30"   Grid.Column="3" Grid.Row="0" Click="Button_Click_1"/>
+            <Button Content="Check" FontSize="15"  Grid.Column="4" Grid.Row="0" Click="Button_Click_2" />
+            <Label x:Name="timer" FontSize="30" Grid.Column="5" Grid.Row="0" Background="DarkRed" Foreground="Orange"/>
 
         </Grid>
-        <Label x:Name="contenthere" Margin="10,83,10,0">
+        <Label x:Name="contenthere" Margin="10,80,10,0">
 
 
         </Label>
